--- a/.devcontainer/dex/config.yaml
+++ b/.devcontainer/dex/config.yaml
@@ -19,6 +19,6 @@ staticPasswords:
   - email: 'dev@daytona.io'
     # password generated with:
     # echo password | htpasswd -BinC 10 admin | cut -d: -f2
-    hash: '$2a$10$2b2cU8CPhOTaGrs1HRQuAueS7JTT5ZHsHSzYiFPm1leZck7Mc8T4W'
+    hash: '$2y$10$KvjTIAWrD9utRmgDfiPxa.SiQUynYz7XYBr.0VnHcePmc/ZLLkk1a'
     username: 'admin'
     userID: '1234'
