--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,12 +1,12 @@
 PORT=3001
 
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=user
-DB_PASSWORD=pass
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 DB_DATABASE=application_ctx
 
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 
 OIDC_CLIENT_ID=daytona
@@ -36,7 +36,7 @@ SMTP_PASSWORD=
 SMTP_SECURE=
 SMTP_EMAIL_FROM="Daytona Team <no-reply@daytona.io>"
 
-S3_ENDPOINT=http://minio:9000
+S3_ENDPOINT=http://localhost:9000
 S3_REGION=us-east-1
 S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
